syntax = "proto3";

option go_package = "github.com/tuhalang/authen/domain";

service Login {
  rpc HandleLogin(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string assesToken = 1;
}