syntax = "proto3";

option go_package = "github.com/tuhalang/authen/domain";

service Validate {
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  string path = 1;
  string token = 2;
  string method = 3;
}

message ValidateResponse {
  bool isAllowed = 1;
}